<resources>
    <string name="app_name">Gym Masters</string>
    <string name="sign_up_user_name_edit_text_hint">Username</string>
    <string name="sign_up_email_edit_text_hint">Email</string>
    <string name="sign_up_password_edit_text_hint">Password</string>
    <string name="sign_up_sign_up_button">Sign up</string>
    <string name="username_hint_error">Username can\'t be empty</string>
    <string name="password_hint_error">Password should be six or more characters</string>
    <string name="email_hint_error">Invalid email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_exercises">ExercisesActivity</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="about_me">About me</string>
    <string name="signup_failed">Sign up failed with this email and password.</string>
    <string name="error_signing_up">Error happened while signing up, Check connection and retry.</string>
    <string name="sign_in">Sign in</string>
    <string name="use_gym_master_account">Error signing in with google account, please login with Gym master account instead.</string>
    <string name="or">-OR-</string>
    <string name="credentials_error">Error signing in, check your credentials</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="home">Home</string>
    <string name="permission_required">Permission required</string>
    <string name="permanently_denied_permission">You permanently denied permission ,but it can be changed from settings</string>
    <string name="change">Change</string>
    <string name="mcancel">Cancel</string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_logging_out">\"Error logging out: \"</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="connection_lost">Internet connection lost</string>
    <string name="app_need_network">App needs internet connection to fully utilize its features</string>
    <string name="ok">OK</string>
    <string name="no_exercises_found">No exercises found</string>
    <string name="error_while_loading_data">Something went wrong while downloading data</string>
    <string name="you_didnt_create_custom_workouts">This account didn\'t create any custom workouts yet.</string>
    <string name="my_workouts">My workouts</string>
    <string name="users_list">Users list</string>
    <string name="my_exercises">My exercises</string>
    <string name="you_didnt_create_custom_exercises">This account didn\'t create any custom exercises yet.</string>
    <string name="rating_formula">%1$d/5</string>
    <string name="edit">Edit</string>
    <string name="following">following</string>
    <string name="follower_s">follower(s)</string>
    <string name="create_workout">Create workout</string>
    <string name="view_my_exercises">My exercises</string>
    <string name="view_my_workouts">My workouts</string>
    <string name="create_exercise">Create exercise</string>
    <string name="add_two_photos_describing_the_exercise">Add two photos describing the exercise :</string>
    <string name="upload">Upload</string>
    <string name="exercise_name">Exercise name :</string>
    <string name="enter_execution_steps">Enter execution steps..</string>
    <string name="targeted_muscle">Targeted Muscle :</string>
    <string name="mechanic">Mechanic :</string>
    <string name="any_addiditonal_thoughs">Any addiditonal thoughs?</string>
    <string name="additional_notes">Additional notes :</string>
    <string name="executions_steps">Executions steps</string>
    <string name="execution">Execution :</string>
    <string name="exercises_added_successfully">Added Exercise successfully.</string>
    <string name="something_went_wrong">Something went wrong, try again later.</string>
    <string name="exercise_was_same_name_exist">Exercise with same name already exists \n your exercise was not added</string>
    <string name="exercise_name_atleast_6">Exercise name must be at least 6 letters</string>
    <string name="workout_name_atleast_6">Workout name must be at least 6 letters</string>
    <string name="execution_atleast_30">Please provide more execution steps to help other users do exercise correctly</string>
    <string name="select_mechanic">Press arrow to select mechanic</string>
    <string name="select_target_muscle">Press arrow to select targeted muscle</string>
    <string name="select_photos">Select two photos describing exercise movement.</string>
    <string name="uploading">Uploading…</string>
    <string name="workout_name">Workout name :</string>
    <string name="what_do_you_wanna_call_it">What do you want to call it</string>
    <string name="duration">Duration :</string>
    <string name="estimated_time_of_workout">Estimated time of workout</string>
    <string name="level">Level :</string>
    <string name="add_cover_photo_for_your_workout">Add cover photo for your workout :</string>
    <string name="press_to_add_exercises_to_your_workout">Press + to add exercises to your workout</string>
    <string name="workout_uploaded">Workout uploaded</string>
    <string name="workout_upload_failed">Uploading failed, check connection and try again</string>
    <string name="duration_0_to_120">Duration must be from 0 to 120 minutes</string>
    <string name="select_workout_image">Select image to represent workout</string>
    <string name="select_workout_level">Select workout level</string>
    <string name="workout_doesnt_have_any_exercise">Workout must have at lease 1 exercise</string>
    <string name="chose_sets_reps_count">Choose sets and repetitions</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="added_exercise_to_workout">Added exercise to workout</string>
    <string name="sets">%1$s Sets</string>
    <string name="reps">%1$s Reps</string>
    <string name="no_followers_yet">No followers yet</string>
    <string name="you_didn_t_follow_any_users_yet">You didn\'t follow any users yet.</string>
    <string name="find_users_to_follow">Find users to follow</string>
    <string name="no_users_found">No users found</string>
    <string name="followers_count">%1$d Followers</string>
    <string name="my_followers">My followers</string>
    <string name="users_iam_following">Users I am following</string>
    <string name="play_video_instead">Show video instead of images</string>
    <string name="none">None</string>
    <string name="basic_definition">A principal exercise that can place greater absolute intensity
        on muscles exercised relative to auxiliary exercises. Basic exercises tend to have more of
        the following characteristics:gravity dependentinclusion or shift of resistance through
        multiple muscle group throughout the range of motione.g. bench press: front deltoid to
        pectoralis major to tricepsnatural transfer of torsion force to compression force (e.g.,
        lockout on squat, bench press, etc.) or tension force (e.g. extension of arm curl) to the
        bone(s) and joint(s) during full range of motionAlso see angle of pull</string>
    <string name="compound_definition">\"An exercise that involves two or more joint movements. \"</string>
    <string name="got_it">Got it!</string>
    <string name="delete_exercise_q">Delete exercise ?</string>
    <string name="confirm_delete_exercise">Are you sure you want to delete this exercise permanently from app?</string>
    <string name="delete">Delete</string>
    <string name="exercise_deleted_successfully">Exercise deleted Successfully</string>
    <string name="error_deleting_exercise">Error while deleting exercise</string>
    <string name="in_app_play_failed">In app play failed ,Show video inside youtube app instead?</string>
    <string name="error_playing_video">Error playing video</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="selected_exercise_not_found_it_might_have_been_deleted">Selected exercise not found, it might have been deleted</string>
    <string name="follow">follow</string>
    <string name="rate">rate</string>
    <string name="about_user">About Mohammed</string>
    <string name="click_to_view">Click to view</string>
    <string name="your_feed">Your feed</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="this_post_has_no_comments_yet">This post has no comments yet</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="professional">Professional</string>
    <string name="loading_news_feed">Loading news feed...</string>
    <string name="follow_more_users">Follow more users</string>
    <string name="no_news_feed_from_the_users_you_follow">No News feed from the users you follow</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="feed">Feed</string>
    <string name="personal">Personal</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="utilities">Utilities</string>
    <string name="nearby_gyms">Nearby gyms</string>
    <string name="find">Find</string>
    <string name="discover">Discover</string>
    <string name="social">Social</string>
    <string name="view_my_followers">My followers</string>
    <string name="view_users_iam_following">Users I am following</string>
    <string name="rating">rating</string>
    <string name="tell_your_followers_something_about_yourself">Tell your followers something about yourself</string>
    <string name="no_workouts_found">No workouts found</string>
    <string name="delete_workout_question">Delete workout ?</string>
    <string name="confirm_delete_workout">Are you sure you want to delete this workout permanently from app?</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="workout_hint">Workout hint</string>
    <string name="click_any_exercise_to_view_in_full_detail">Click any exercise to view in full detail</string>
    <string name="timer">Timer</string>
    <string name="reset_timer">Reset timer</string>
    <string name="set_timer">Set timer</string>
    <string name="low_volume">Low volume</string>
    <string name="device_volume_is_less_than_50_consider_increasing_it_to_hear_reminder_clearly">Device volume is less than 50%, consider increasing it to hear reminder clearly</string>
    <string name="set">Set</string>
    <string name="choose_timer_duration">Choose timer duration</string>
    <string name="unknown">Unknown</string>
    <string name="open_right_now">Open right now</string>
    <string name="closed_right_now">Closed right now</string>
    <string name="gym_rate">%1$s /5</string>
    <string name="location_rationale">We need your location to be able to find a gym near your location</string>
    <string name="perm_granted">Permission granted</string>
    <string name="rat_accepted">rationale accpeted</string>
    <string name="rat_denied">rational denied</string>
    <string name="req_perm">Requesting permission</string>
    <string name="perm_denied">Permission denied</string>
    <string name="all_good_get_location">All good get location</string>
    <string name="perm_permanently_denied_go_to_settings">Permanantely denied, Go to setting</string>
    <string name="return_from_settings">Return from settings</string>
    <string name="please_enable_gps">Please enable GPS so we can show you a gym near your location</string>
    <string name="create">Create</string>
    <string name="view">View</string>
</resources>