<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <Button
        android:id="@+id/createExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:src="@color/blue"
        android:text="@string/create_exercise"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/createWorkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create_workout"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="@+id/space2" />

    <Space
        android:id="@+id/space2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@+id/createExercise"
        app:layout_constraintEnd_toStartOf="@+id/createWorkout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/createExercise"
        app:layout_constraintTop_toTopOf="@+id/createExercise" />

    <Space
        android:id="@+id/space3"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@+id/viewLoggedUserExercises"
        app:layout_constraintEnd_toStartOf="@+id/viewLoggedUserWorkouts"
        app:layout_constraintStart_toEndOf="@+id/viewLoggedUserExercises"
        app:layout_constraintTop_toTopOf="@+id/viewLoggedUserExercises" />

    <Space
        android:id="@+id/space4"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@+id/viewMyFollowersButton"
        app:layout_constraintEnd_toStartOf="@+id/viewUsersIamFollowingButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewMyFollowersButton"
        app:layout_constraintTop_toTopOf="@+id/viewMyFollowersButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/viewLoggedUserExercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view_my_exercises"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/viewLoggedUserWorkouts"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Button
        android:id="@+id/viewLoggedUserWorkouts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view_my_workouts"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/space3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewLoggedUserExercises"
        app:layout_constraintTop_toTopOf="@+id/space3" />

    <Button
        android:id="@+id/viewMyFollowersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view_my_followers"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/viewUsersIamFollowingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view_users_iam_following"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/space4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space4"
        app:layout_constraintTop_toTopOf="@+id/space4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/create"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/view"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/social"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/create"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_blue_dot"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExercise"
        app:srcCompat="@drawable/ic_blue_dot" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLoggedUserExercises"
        app:srcCompat="@drawable/ic_blue_dot" />


</androidx.constraintlayout.widget.ConstraintLayout>