<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parentScroll"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
  >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!--toolbar-->
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/backArrowImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_white"
                    android:adjustViewBounds="true"
                    style="?android:borderlessButtonStyle"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_exercise"
                    android:textColor="#eee"
                    android:textSize="18sp"
                   />

            </androidx.appcompat.widget.Toolbar>

            <!--name ,execution , additinal note-->
            <LinearLayout
                android:id="@+id/about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/circular_white_bordersolid"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="9dp"
                            android:layout_height="9dp"
                            android:layout_marginTop="8dp"
                            android:id="@+id/exerciseNameDot"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/orange_circle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/proximanovaregular"
                            android:text="@string/exercise_name"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/what_do_you_wanna_call_it"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="9dp"
                            android:layout_height="9dp"
                            android:layout_marginTop="8dp"
                            android:id="@+id/executionDot"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/orange_circle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/proximanovaregular"
                            android:text="@string/execution"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/executionEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/executions_steps"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/proximanovaregular"
                            android:text="@string/additional_notes"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/additionalNotesEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/any_addiditonal_thoughs"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>


            </LinearLayout>


            <!--mechanic , target muscle-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/circular_white_bordersolid"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="9dp"
                        android:layout_height="9dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:id="@+id/mechanicDot"
                        android:src="@drawable/orange_circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/mechanic"
                        android:textSize="17sp"
                        android:textStyle="bold"

                        />

                    <Spinner
                        android:id="@+id/mechanicSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text=" dd" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="9dp"
                        android:layout_height="9dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:id="@+id/targetedMuscleDot"
                        android:src="@drawable/orange_circle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="@string/targeted_muscle"
                        android:textSize="17sp"
                        android:textStyle="bold"

                        />

                    <Spinner
                        android:id="@+id/bodyPartSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/enter_execution_steps"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text=" dd" />
                </LinearLayout>
            </LinearLayout>


            <!--photos-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/circular_white_bordersolid"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/exerciseImagesDot"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/orange_circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/add_two_photos_describing_the_exercise"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/exerciseImagesDot"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:layout_editor_absoluteX="0dp">

                    <ImageView
                        android:id="@+id/workoutImageView"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:src="@drawable/startexercise"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow_point_to_right" />

                    <ImageView
                        android:id="@+id/addExercisePhoto2"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/endexercise" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/saveButton"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="@font/proximanovaregular"
                android:text="@string/upload"
                android:textSize="24sp" />

        </LinearLayout>


        <!--loading layout-->
        <include
            android:id="@+id/loadingLayout"
            layout="@layout/loading_layout"
            android:visibility="gone" />

    </FrameLayout>


</ScrollView>